Add configuration editor to project editing page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -323,6 +323,7 @@ citation.versionDate=Stand\:
 clear=Eingabe l\u00F6schen
 close=Schlie\u00DFen
 configurationChanged=Einstellungen ge\u00E4ndert
+configurationFile=Konfigurationsdatei
 confirmNewPassword=Neues Passwort best\u00E4tigen
 confirmRename=Sind Sie sicher, dass Sie diesen Vorgang umbenennen m\u00F6chten?
 contentLoeschen=Content l\u00F6schen
@@ -389,6 +390,7 @@ digitaleKollektionen=Digitale Kollektionen
 directory=Verzeichnis
 directoryRemoved=Verzeichnis aus Benutzerhome entfernt
 directoryRemovedAll=Alle Verzeichnisse aus Benutzerhome entfernt
+displayRules=Anzeigeregeln für Metadaten
 dmsExportformat=DMS Exportformat
 dmsImportCreateProcessFolder=Erzeuge Vorgangsordner
 dmsImportErrorPfad=DMS-Export-Error-Ordner
@@ -418,6 +420,7 @@ durationInMonth=Laufzeit in Monaten
 editDocket=Laufzettel bearbeiten
 editDocket}=Laufzettel bearbeiten
 editMetadataGroup=Metadatengruppe bearbeiten
+editor=Editor
 eigenschaft=Eigenschaft
 eigenschaftBearbeiten=Eigenschaft bearbeiten
 eigenschaftHinzufuegen=Eigenschaft hinzuf\u00FCgen
@@ -831,6 +834,7 @@ produktionsdurchsatz=Produktionsdurchsatz
 progress=Fortschritt
 project=Projekt
 projectAssociation=Projektzugeh\u00F6rigkeit
+projectConfiguration=Projektkonfiguration
 projectIsArchived=Projekt ist inaktiv
 projectProgress=Projektentwicklung
 projects=Projekt
@@ -894,6 +898,7 @@ rulesetOrderByFile=Sortierung wie im Regelsatz
 rulesetTitle=Name des Regelsatzes
 runtimeOfSteps=Laufzeit der Aufgaben
 russischeMetadatenExportieren=Datei f\u00FCr russische Metadaten exportieren
+saveConfiguration=Konfigurationsdatei speichern
 saveNotOk=Die Speicherung war nicht erfolgreich
 saveValue=Wert speichern
 saveok=Die Speicherung war erfolgreich
