--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -326,6 +326,7 @@ citation.versionDate=Version of\:
 clear=delete entry
 close=close
 configurationChanged=Configuration changed
+configurationFile=Configuration file
 confirmNewPassword=Confirm new password
 confirmRename=Are you sure you want to rename this item?
 contentLoeschen=Delete content
@@ -392,6 +393,7 @@ digitaleKollektionen=Digital collections
 directory=Folder
 directoryRemoved=Removed directory from home directory
 directoryRemovedAll=Removed all folder from home directory
+displayRules=Metadata display rules
 dmsExportformat=DMS export format
 dmsImportCreateProcessFolder=Create process folder
 dmsImportErrorPfad=DMS import error path
@@ -421,6 +423,7 @@ durationInMonth=Duration in month
 editDocket=edit docket
 editDocket}=edit docket
 editMetadataGroup=Edit metadata group
+editor=Editor
 eigenschaft=Property
 eigenschaftBearbeiten=Edit property
 eigenschaftHinzufuegen=Add property
@@ -835,6 +838,7 @@ produktionsdurchsatz=Production throughput
 progress=Progress
 project=Project
 projectAssociation=Project association
+projectConfiguration=Project configuration
 projectIsArchived=project inactive
 projectProgress=Project progress
 projects=project
@@ -901,6 +905,7 @@ rulesetTitle=Name of rule set
 runtimeOfSteps=Duration of the steps
 rusdmlWebseite=RusDML website
 russischeMetadatenExportieren=Export file for Russian metadata
+saveConfiguration=Save configuration file
 saveNotOk=Save was not successful
 saveValue=Save value
 saveok=Save was successful
