Update links in new user and dashboard menus

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -950,6 +950,7 @@ showErrorDetails=Detaillierte Fehlerbeschreibung anzeigen
 sicher=Sicher
 sieSindBereitsEingeloggt=Sie sind bereits eingeloggt. Wie m\u00F6chten Sie vorgehen?
 signaturInklSigel=Signatur inkl. Bibl.-Sigel
+signout=Abmelden
 sollDerContentWirklichGeloeschtWerden=Soll der Inhalt wirklich gel\u00F6scht werden?
 sollDieserEintragWirklichGeloeschtWerden=Soll dieser Eintrag wirklich gel\u00F6scht werden?
 spaeter=Bitte versuchen Sie es in einigen Minuten erneut.
@@ -1063,6 +1064,7 @@ urls=URLs
 useForPreviewImage=Nur ausgew\u00E4hltes Vorschaubild verlinken
 users=Benutzer
 userAssignedError=Das Projekt kann nicht gel\u00F6scht werden, da diesem noch Benutzer zugewiesen sind.
+userData=Benutzerdaten \u0026 Einstellungen
 userDN=User DN
 userGroupAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da dieser noch Aufgaben zugewiesen sind.
 userGroupNotEmpty=Benutzergruppe ist nicht leer, L\u00F6schen wurde verweigert
