--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -957,6 +957,7 @@ showErrorDetails=Show detailed error description
 sicher=Sure
 sieSindBereitsEingeloggt=You are already logged in. How do you want to proceed?
 signaturInklSigel=Signature incl. abbreviation
+signout=Sign out
 sollDerContentWirklichGeloeschtWerden=Do you really want to delete the content?
 sollDieserEintragWirklichGeloeschtWerden=Do you really want to delete this item?
 spaeter=Please try again in a few minutes.
@@ -1069,6 +1070,7 @@ uploadSuccessful=File {0} uploaded successfully. Please press 'save'
 urls=URLs
 useForPreviewImage=Link selected preview image only
 userAssignedError=The project could not be deleted because there are still assigned users.
+userData=User data \u0026 settings
 userDN=User DN
 userGroupAssignedError=The user group could not be deleted because there are still assigned steps.
 userGroupNotEmpty=User group is not empty
