Fix indexing label for template properties

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1008,7 +1008,8 @@ technischeDaten=Technical data
 technischerHintergrund=Technical background
 technischerHintergrundText=The goals of the Kitodo project make great demands on the software. Standard solutions or already existing scripts are not sufficient for the Kitodo project
 technischerHintergrundTextDemo=With the help of Kitodo it will be easier to collect and edit the different information of the journals. This affects the generation of the general metadata and the hierarchical structural data of the volumes and also concerns the matching of logical (printed) and physical page numbers. Metadata from different sources are to be imported on the basis of an XML format. Via a WebDAV server
-templateProperties=template property
+templateProperties=template properties
+templateProperty=template property
 templateProviderOfflineFileNotFound=XML-based template provider is down
 templateProviderOfflineXMLmalformed=XML-based template provider is down
 throughput=throughput
