Update project save button

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -754,6 +754,7 @@ newProcess.catalogueSearch.leaveDisplay=Zur\u00fcck
 newProcess.catalogueSearch.nextPage=Weiter
 newProcess.catalogueSearch.previousPage=Zur\u00fcck
 newProcess.catalogueSearch.results=Ihre Suche erzielte {0} Treffer:
+newProject=Neues Projekt
 newProzess=Neuen Vorgang anlegen
 newProzessvorlage=Neue Produktionsvorlage anlegen
 newSchritt=Neue Aufgabe anlegen
