--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -758,6 +758,7 @@ newProcess.catalogueSearch.leaveDisplay=Cancel
 newProcess.catalogueSearch.nextPage=Continue
 newProcess.catalogueSearch.previousPage=Backwards
 newProcess.catalogueSearch.results=Your search achieved {0} results\:
+newProject=New project
 newProzess=Create new process
 newProzessvorlage=Create new process template
 newSchritt=Create new task
