added zoom change and rotate image functionality

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -340,6 +340,7 @@ createXML=Export des Logfiles in das Home Verzeichnis
 createdInUserHome=Verzeichnis in Benutzerhome angelegt
 createdInUserHomeAll=Verzeichnisse in Benutzerhome angelegt
 currentRepresentative=Aktueller Repr\u00E4sentant\:
+currentFolder=Aktueller Ordner
 dataCopier.runtimeException=Fehler beim Kopieren der Daten\:
 dataCopier.syntaxError=Die Datenkopierregel hat ein falsches Format\:
 datei=Datei
@@ -352,7 +353,7 @@ defaultDocket=Standardlaufzettel
 defineStatisticalQuestion=Statistische Abfrage definieren
 deleteAfterMove=Nach dem Export l\u00F6schen
 deleteBatch=Den ausgew\u00E4hlten Batch l\u00F6schen
-deleteIndex=ElasticSearch Index löschen
+deleteIndex=ElasticSearch Index lï¿½schen
 deleteSeltectedPages=Ausgew\u00E4hlte Seiten l\u00F6schen
 denErzeugtenBandOeffnen=Den erzeugten Vorgang \u00F6ffnen
 dennochEinloggen=Dennoch einloggen
@@ -390,7 +391,7 @@ digitaleKollektionen=Digitale Kollektionen
 directory=Verzeichnis
 directoryRemoved=Verzeichnis aus Benutzerhome entfernt
 directoryRemovedAll=Alle Verzeichnisse aus Benutzerhome entfernt
-displayRules=Anzeigeregeln für Metadaten
+displayRules=Anzeigeregeln fï¿½r Metadaten
 dmsExportformat=DMS Exportformat
 dmsImportCreateProcessFolder=Erzeuge Vorgangsordner
 dmsImportErrorPfad=DMS-Export-Error-Ordner
@@ -570,8 +571,10 @@ id=ID
 idImport=ID Import
 imHomeVerzeichnisVerlinken=Im Homeverzeichnis verlinken
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Imageordner in Homeverzeichnis verlinken, obwohl ein anderer Nutzer gerade damit arbeitet.
+imageNumber=Bildnummer
 imagePaginationError=Es wurden {1} Bilder gefunden, aber {0} Bilder erwartet. Bitte \u00FCberpr\u00FCfen Sie die Paginierung.
 imageSelection=Datei ausw\u00E4hlen
+imageVisualization=Bildanzeige
 images=Images
 imagesDurchschnitt=Images Durchschnitt
 imagesGesamt=Images gesamt
@@ -593,7 +596,7 @@ impressumTextDemo=Dies ist eine Testinstallation von Kitodo.Production.<br/>Norm
 inAuswahllisteAnzeigen=In Auswahlliste anzeigen
 inBearbeitungDurch=In Bearbeitung durch
 includeLoops=Schleifen einbeziehen
-indexedEntries=Indexierte Einträge
+indexedEntries=Indexierte Eintrï¿½ge
 indexing=Indexierung
 insertAsUncounted=Als unnummeriert einf\u00FCgen
 insertIntoPagination=In Paginierungssequenz einf\u00FCgen
