--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -343,6 +343,7 @@ createXML=Export logfile as XML file to home directory
 createdInUserHome=Folder created in user directory
 createdInUserHomeAll=Folders created in user directory
 currentRepresentative=Current representative\:
+currentFolder=Current Folder
 dataCopier.runtimeException=Coyping the data failed\:
 dataCopier.syntaxError=The data copying rule is malformed\:
 datei=File
@@ -573,6 +574,8 @@ idImport=ID import
 ideographCorrection=C
 imHomeVerzeichnisVerlinken=Link within home directory
 imHomeVerzeichnisVerlinkenTrotzBearbeitung=Link image folder in user home even though another user is working with this data.
+imageNumber=Image number
+imageVisualization=Image visualization
 imagePaginationError={1} images found but {0} images expected. Please check the pagination.
 imageSelection=Select file
 images=Images
