implemented edit pagination

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -28,6 +28,7 @@ createMapping=Create ElasticSearch mapping
 CreateNewspaperProcessesTask=Creation of processes for a newspaper
 CreateNewspaperProcessesTask.MetadataNotAllowedException=The process {0} cannot be created because a metadata element cannot be assigned to a structural type
 CreatePdfFromServletThread=Create PDF
+counting=Counting
 DMSExportByThread=The process is being exported into the DMS by the task manager\:
 DMSExportThreadCreated=The DMS export for the process has been prepared in the task manager\:
 DocketInUse=The docket is still associated with processes and could not be deleted.
@@ -810,7 +811,10 @@ pagesPerYear=Pages per Year
 pagination.error.uncountedFoliationNotAllowed=Foliation not allowed when using 'uncounted'
 paginationFictitious=Fictitious paginating
 paginationFreetext=free text
+paginationStartValue=Pagination start value
+paginationStartValueNotSpecified=Pagination start value not specified
 paginationSelection=At which point the file you want to insert?
+paginationNoPagesSelected=No pages for pagination selected
 paginierung=Pagination
 paginierungBearbeiten=Edit pagination
 paginierungEinlesen=Read in pagination from images
