--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -28,6 +28,7 @@ CreateNewspaperProcessesTask=Anlegen von Zeitungsvorg\u00E4ngen
 CreateNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann nicht angelegt werden, da einem Strukturyp ein Metadatum nicht zugewiesen werden kann
 CreatePdfFromServletThread=PDF erzeugen
 Corrections/Errors=Korrekturmeldungen / Fehlermeldungen
+counting=Z\u00E4hlung
 DMSExportByThread=Der Vorgang wird vom Taskmanager ins DMS exportiert\:
 DMSExportThreadCreated=Der DMS-Export f\u00FCr den Vorgang wurde im Taskmanager vorbereitet\:
 DocketInUse=Der Laufzettel ist noch mit Prozessen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
@@ -807,6 +808,9 @@ pagination.error.uncountedFoliationNotAllowed=Blattzaehlung ohne Nummerierung ni
 paginationFictitious=Fiktive Paginierung
 paginationFreetext=Freitext
 paginationSelection=An welche Stelle soll die Datei eingef\u00FCgt werden?
+paginationStartValue=Paginierungsstartwert
+paginationStartValueNotSpecified=Paginierungsstartwert wurd nicht festgelegt
+paginationNoPagesSelected=Keine Seiten f\u00FCr Paginierung ausgew\u00E4hlt
 paginierung=Paginierung
 paginierungBearbeiten=Paginierung bearbeiten
 paginierungEinlesen=Paginierung anhand der Images einlesen
