reordering of xhtmls

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -811,6 +811,7 @@ paginationSelection=An welche Stelle soll die Datei eingef\u00FCgt werden?
 paginationStartValue=Paginierungsstartwert
 paginationStartValueNotSpecified=Paginierungsstartwert wurd nicht festgelegt
 paginationNoPagesSelected=Keine Seiten f\u00FCr Paginierung ausgew\u00E4hlt
+paginationScope=Paginierungsumfang
 paginierung=Paginierung
 paginierungBearbeiten=Paginierung bearbeiten
 paginierungEinlesen=Paginierung anhand der Images einlesen
