--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -815,6 +815,7 @@ paginationStartValue=Pagination start value
 paginationStartValueNotSpecified=Pagination start value not specified
 paginationSelection=At which point the file you want to insert?
 paginationNoPagesSelected=No pages for pagination selected
+paginationScope=Pagination scope
 paginierung=Pagination
 paginierungBearbeiten=Edit pagination
 paginierungEinlesen=Read in pagination from images
