Show error message to user

--- a/Goobi/src/messages/messages_en.properties
+++ b/Goobi/src/messages/messages_en.properties
@@ -56,6 +56,7 @@ Import\ der\ Zentralblatt-Metadaten=Import of Zentralblatt metadata
 Import\ in\ die\ lokalen\ DMS\ bzw.\ Repositories=Import into local DMS or repositories
 InvalidIdentifierCharacter=The value of the identifier {0} of the structural element {1} contains invalid characters.
 InvalidIdentifierSame=The value of the identifier {0} contains the same values in {1} and {2}.
+InvalidValueForPagination=Invalid value "{0}" for choosed pagination
 Korrektur\ Import\ Zentralblatt=Check import from Zentralblatt
 Korrektur\ durchgefuehrt=Correction performed
 Korrektur\ notwendig=correction required
