--- a/Goobi/src/messages/messages_de.properties
+++ b/Goobi/src/messages/messages_de.properties
@@ -55,6 +55,7 @@ Import\ der\ Zentralblatt-Metadaten=Import der Zentralblatt-Metadaten
 Import\ in\ die\ lokalen\ DMS\ bzw.\ Repositories=Export in die lokalen DMS bzw. Repositories
 InvalidIdentifierCharacter=Der Wert des Identifiers {0} im Strukturelement {1} enth\u00E4lt ung\u00FCltige Zeichen.
 InvalidIdentifierSame=Der Wert des Identifiers {0} enth\u00E4lt die gleichen Werte in {1} und {2}.
+InvalidValueForPagination=Ung\u00FCltiger Wert "{0}" f\u00FCr die ausgew\u00E4hlte Paginierung
 Korrektur\ Import\ Zentralblatt=Korrektur Import Zentralblatt
 Korrektur\ durchgefuehrt=Korrektur durchgef\u00FChrt
 Korrektur\ notwendig=Korrektur notwendig
