Replace dummy items in new navigation

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -29,6 +29,7 @@ CreateNewspaperProcessesTask.MetadataNotAllowedException=Der Vorgang {0} kann ni
 CreatePdfFromServletThread=PDF erzeugen
 Corrections/Errors=Korrekturmeldungen / Fehlermeldungen
 counting=Z\u00E4hlung
+dashboard=Dashboard
 DMSExportByThread=Der Vorgang wird vom Taskmanager ins DMS exportiert\:
 DMSExportThreadCreated=Der DMS-Export f\u00FCr den Vorgang wurde im Taskmanager vorbereitet\:
 DocketInUse=Der Laufzettel ist noch mit Prozessen verkn\u00FCpft und kann nicht gel\u00F6scht werden.
@@ -60,6 +61,7 @@ Korrektur\ durchgefuehrt=Korrektur durchgef\u00FChrt
 Korrektur\ notwendig=Korrektur notwendig
 KorrekturFuer=Korrektur f\u00FCr Schritt
 KorrekturloesungFuer=Korrekturl\u00F6sung f\u00FCr Schritt
+Language=Sprache
 Lizenzeinwerbung=Lizenzeinwerbung
 mapping=ElasticSearch Mapping
 MassDownloadProjectCreationError=Der Projektordner {0} kann nicht erstellt werden.
@@ -140,6 +142,7 @@ aktuelleSchritte=Meine Aufgaben
 aktuelleZeit=Aktuelle Zeit
 aktuellerOrdner=Aktueller Ordner
 aktuellesPasswortFalsch=Das aktuelle Passwort ist falsch
+allActiveUsers=alle aktiven Nutzer
 alleAuswaehlen=Alle ausw\u00E4hlen
 alleSeiten=Alle Seiten
 alleTasksAusListeEntfernen=Alle Aufgaben l\u00F6schen
@@ -148,6 +151,7 @@ allgemeineEigenschaften=Allgemeine Eigenschaften
 allgemeines=Allgemeines
 allgemeinesText=Die Software Kitodo dient zur Organisation von Digitalisierungsworkflows. Das Softwarepaket f\u00FCr diese kooperative und kollaborative Arbeitsumgebung ist der zentrale Baustein und erf\u00FCllt folgende Funktionalit\u00E4ten\: Plattform-Unabh\u00E4ngigkeit (Web-Applikation), da Partner weltweit auf das Tool zugreifen m\u00FCssen; Zentrale Metadaten-Verwaltung, d.h. Katalogisieren und Vervollst\u00E4ndigung der Metadaten von verschiedenen Standorten aus (zum Beispiel Erstellung der russischen Metadaten in Moskau, Transliterationen in Hannover); Zentrale Verwaltung der Digitalisate (Images); Import- und Exportschnittstellen f\u00FCr Metadaten und f\u00FCr Fremd-Digitalisate (zum Beispiel aus Russland); Controlling-Mechanismen\: welcher Partner ist wie weit mit seinen Arbeiten, welche Zeitschrift ist in welchem Bearbeitungsstadium etc.; Fehlermeldungen, Abschlie\u00DFen eines Arbeitsschrittes und Weiterleiten zur n\u00E4chsten Arbeitsstufe (eventuell hier auch Wechsel/\u00DCbergabe von einem Partner zum anderen Partner). Komponenten f\u00FCr das verteilte Workflowmanagement sind integriert worden, um die Verwaltung einer verteilten Produktion und Kommunikation zwischen den unterschiedlichen Partnern zu gew\u00E4hrleisten. F\u00FCr jeden einzelnen Workflowschritt kann eingestellt werden, ob er parallel zum vorherigen durchgef\u00FChrt werden kann oder erst nach dessen erfolgreichem Abschluss. Ferner werden Korrekturschleifen abgebildet, um in sp\u00E4teren Schritten festgestellte fehlerhafte Daten fr\u00FCherer Schritte zu vermerken. Die Applikation ist transparent konzipiert, somit ist es f\u00FCr jeden Projektpartner jederzeit m\u00F6glich, den Status der Teilschritte des Workflows inklusive Personenzuordnung f\u00FCr einzelne Werke detailliert einzusehen.
 allgemeinesTextDemo=Hier k\u00F6nnte ein allgemeiner Informationstext stehen.<br/><br/>F\u00FCr die Testinstanz gelten folgende Logins, zu denen jeweils das gleiche Passwort verwendet werden kann.<br/><br/><b>testadmin</b><br/><b>testscanning</b><br/><b>testqc</b><br/><b>testimaging</b><br/><b>testmetadata</b><br/><b>testprojectmanagement</b><br/><br/><br/>Passwort f\u00FCr alles\: test<br/>
+allMyTasks=alle meine Aufgaben
 alsErstesKindDesAktuellenElements=Als erstes Subelement des aktuellen Elementes
 alsLetztesKindDesAktuellenElements=Als letztes Subelement des aktuellen Elementes
 alsUnterelemente=Als Unterelemente
@@ -925,6 +929,7 @@ scriptAusfuehren=Skript ausf\u00FChren
 scripte=Skripte
 scriptname=Skriptname
 scriptpath=Skriptpfad
+searchPlaceholder=Suche nach Projekten, Vorgängen, Aufgaben oder Benutzern
 seite=Seite
 seiteVor=vorw\u00E4rts
 seiten=Seiten
