--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -29,6 +29,7 @@ CreateNewspaperProcessesTask=Creation of processes for a newspaper
 CreateNewspaperProcessesTask.MetadataNotAllowedException=The process {0} cannot be created because a metadata element cannot be assigned to a structural type
 CreatePdfFromServletThread=Create PDF
 counting=Counting
+dashboard=Dashboard
 DMSExportByThread=The process is being exported into the DMS by the task manager\:
 DMSExportThreadCreated=The DMS export for the process has been prepared in the task manager\:
 DocketInUse=The docket is still associated with processes and could not be deleted.
@@ -61,6 +62,7 @@ Korrektur\ durchgefuehrt=Correction performed
 Korrektur\ notwendig=correction required
 KorrekturFuer=Correction for step
 KorrekturloesungFuer=Correction done for step
+Language=Language
 Lizenzeinwerbung=Application for a licence
 mapping=ElasticSearch mapping
 MassDownloadProjectCreationError=The project folder {0} could not be created.
@@ -143,6 +145,7 @@ aktuelleSchritte=My tasks
 aktuelleZeit=Current time
 aktuellerOrdner=Current folder
 aktuellesPasswortFalsch=The current password is wrong
+allActiveUsers=all active users
 alleAuswaehlen=Select all
 alleSeiten=All pages
 alleTasksAusListeEntfernen=Remove all tasks
@@ -151,6 +154,7 @@ allgemeineEigenschaften=General properties
 allgemeines=General
 allgemeinesText=Kitodo controls the organisation of the digitisation workflow. The software package for this cooperative and collaborative work environment is the central module
 allgemeinesTextDemo=General information could be placed here. <br/><br/>The following logins are valid for the test account for which each login can be used with the same password.<br/><br/><b>testAdmin</b><br/><b>testScanning</b><br/><b>testQC</b><br/><b>testImaging</b><br/><b>testMetaData</b><br/><b>testProjectmanagement</b><br/><br/><br/><br/>Password\: test<br/>
+allMyTasks=all my tasks
 alsErstesKindDesAktuellenElements=As first child of current element
 alsLetztesKindDesAktuellenElements=As last child of current element
 alsUnterelemente=As subelements
@@ -932,6 +936,7 @@ scriptAusfuehren=Execute script
 scripte=Scripts
 scriptname=Script name
 scriptpath=Script path
+searchPlaceholder=Search for projects, processes, tasks or users
 seite=Page
 seiteVor=Forward
 seiten=Pages
