added notifications to project edit page

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -462,6 +462,7 @@ errorReportDescription=Ist dieser Fehler ist zum ersten Mal aufgetreten? Dann me
 errorText=Folgender Fehler ist in Kitodo aufgetreten\:
 errorTracking=Fehlertracking
 errordetails=Fehlerdetails
+errorProjectNoTitleGiven=Kein Titel angegeben. Ein Projekt kann nicht ohne Titel gespeichert werden.
 erscheinungsjahr=Erscheinungsjahr
 erscheinungsort=Erscheinungsort
 ersteSeite=Erste Seite
@@ -851,6 +852,8 @@ projectConfiguration=Projektkonfiguration
 projectIsArchived=Projekt ist inaktiv
 projectProgress=Projektentwicklung
 projects=Projekt
+projectSaving=Projekt wird gespeichert
+projectYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 projekt=Projekt
 projektBearbeiten=Projekt bearbeiten
 projektHinzufuegen=Projekt hinzuf\u00FCgen
@@ -929,7 +932,7 @@ scriptAusfuehren=Skript ausf\u00FChren
 scripte=Skripte
 scriptname=Skriptname
 scriptpath=Skriptpfad
-searchPlaceholder=Suche nach Projekten, Vorgängen, Aufgaben oder Benutzern
+searchPlaceholder=Suche nach Projekten, Vorg\u00E4ngen, Aufgaben oder Benutzern
 seite=Seite
 seiteVor=vorw\u00E4rts
 seiten=Seiten
