--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -465,6 +465,7 @@ errorReportDescription=Does this error occur for the first time? Then report it 
 errorText=The following error occurred in Kitodo\:
 errorTracking=Error tracking
 errordetails=Error details
+errorProjectNoTitleGiven=No project title was given. You cannot save a project without a title.
 erscheinungsjahr=Year of publication
 erscheinungsort=Place of publication
 ersteSeite=First page
@@ -855,6 +856,8 @@ projectConfiguration=Project configuration
 projectIsArchived=project inactive
 projectProgress=Project progress
 projects=project
+projectSaving=Saving project
+projectYouWillBeRedirected=You will be redirected after successful save.
 projekt=Project
 projektBearbeiten=Edit project
 projektHinzufuegen=Add project
