Add messages for edit type

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1009,6 +1009,11 @@ sucheStarten=Suche starten
 suffix=Suffix
 tabellengroesse=Tabellengr\u00F6\u00DFe
 table=Tabelle
+taskEditTypeAdmin=Administrativ
+taskEditTypeAutomatic=Automatisch
+taskEditTypeManualSingle=Manuell single Workflow
+taskEditTypeManualMulti=Manuell multi Workflow
+taskEditTypeUnknown=Unbekannt
 taskManagerIsRunning=Aufgaben nicht automatisch starten
 taskManagerIsStopped=Aufgaben automatisch starten
 taskmanager=Taskmanager
