--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1016,6 +1016,11 @@ sucheStarten=Start search
 suffix=Suffix
 tabellengroesse=Table size
 table=Table
+taskEditTypeAdmin=Administration
+taskEditTypeAutomatic=Automatic
+taskEditTypeManualSingle=Manual single Workflow
+taskEditTypeManualMulti=Manual multi Workflow
+taskEditTypeUnknown=Unknown
 taskManagerIsRunning=do not start tasks automatically
 taskManagerIsStopped=start tasks automatically
 taskmanager=Task manager
