--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -632,6 +632,8 @@ lastPage=Als letzte Seite einf\u00FCgen
 laufzettelDrucken=Laufzettel drucken
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
+ldapgroupSaving=LDAP-Gruppe wird gespeichert
+ldapgroupYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 ldapgruppe=LDAP-Gruppe
 ldapgruppeBearbeiten=LDAP-Gruppe bearbeiten
 ldapgruppen=LDAP-Gruppen
@@ -1071,6 +1073,8 @@ userGroupAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da di
 userGroupNotEmpty=Benutzergruppe ist nicht leer, L\u00F6schen wurde verweigert
 userGroupNotSelected=Keine Benutzergruppe ausgew\u00E4hlt
 userNotFound=Benutzer kann nicht ermittelt werden
+userSaving=Benutzer wird gespeichert
+userYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 validieren=Validieren
 value=Wert
 valueIsRequired=Der Wert wird ben\u00F6tigt.
