--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -635,6 +635,8 @@ lastPage=Insert as last page
 laufzettelDrucken=Print docket
 ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
+ldapgroupSaving=Saving LDAP group
+ldapgroupYouWillBeRedirected=You will be redirected after successful save.
 ldapgruppe=LDAP group
 ldapgruppeBearbeiten=Edit LDAP group
 ldapgruppen=LDAP groups
@@ -1078,6 +1080,8 @@ userGroupNotEmpty=User group is not empty
 userGroupNotSelected=No user group selected
 userNotFound=User not found
 users=Users
+userSaving=Saving user
+userYouWillBeRedirected=You will be redirected after successful save.
 validieren=Validate
 valueIsRequired=The value is required.
 verlag=Publishing house
