Add message for no assigned user

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -769,6 +769,7 @@ noSaveDuplicateName=Eigenschaft kann wegen bereits vorhandener Benennung nicht g
 noStatisticalResultsFound=Keine statistischen Ergebnisse ermittelt.
 noStepsInWorkflow=Im Workflow wurden keine Aufgaben definiert.
 noTimeFrameSelected=Kein Zeitraum festgelegt. Bitte w\u00E4hlen sie korrekte Daten aus.
+noUser=Kein Benutzer eingeloggt
 noUserInStep=Der Aufgabe {0} wurden keine Nutzer zugeordnet.
 normDataRecord=URI
 normaleNutzerBerechtigung=Einfache Nutzerberechtigung
