--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -773,6 +773,7 @@ noSaveDuplicateName=Property cannot be saved because of a duplicate name
 noStatisticalResultsFound=No statistical results found.
 noStepsInWorkflow=No steps of the workflow defined.
 noTimeFrameSelected=No time frame selected. Please select dates.
+noUser=No user assigned.
 noUserInStep=No user assigned to step [0}.
 normDataRecord=URI
 normaleNutzerBerechtigung=Normal user authorisations
