Update header, navigation and messages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -588,6 +588,7 @@ metsfilegroups=METS Dateigruppen
 mimetype=Mime Typ
 missingData=Unvollst\u00E4ndige Daten
 missingPlugin=Bitte w\u00E4hlen Sie ein Plugin aus.
+modeler=BPMN Modeler
 modules=Module
 moeglicheAktionen=M\u00F6gliche Aktionen
 month=Monat
