remove saveMessage add translation for error message "elasticsearch not running" move growl to tbl_kopf

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -438,6 +438,7 @@ einenNeuenProzessAnlegen=Einen neuen Vorgang anlegen
 einenNeuenSchrittAnlegen=Eine neue Aufgabe anlegen
 einheit=Einheit
 einloggen=Einloggen
+elasticSearchNotRunning=Der Elasticsearch Server ist nicht erreichbar. 
 enddate=Enddatum
 enterBatchName=Sie k\u00F6nnen einen Namen f\u00FCr den Batch angeben\:
 enthaltenesWerk=Enthaltenes Werk
