--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -441,6 +441,7 @@ einenNeuenProzessAnlegen=Create new process
 einenNeuenSchrittAnlegen=Create new task
 einheit=unit
 einloggen=Log in
+elasticSearchNotRunning=The elastic search server is not running
 enddate=End date
 enterBatchName=You are free to enter a name for the batch\:
 enthaltenesWerk=Contained work
