Allow assigning multiple authorization levels to usergroup

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -175,6 +175,7 @@ arbeitsschritte=Abfolge der Aufgaben
 artikel=Artikel
 artikelDurchschnitt=Artikel Durchschnitt
 artikelGesamt=Artikel gesamt
+assigned=Zugewiesen
 ats=ATS
 ausGruppeLoeschen=Benutzer aus der Benutzergruppe l\u00F6schen
 ausHomeverzeichnisEntfernen=Verlinkung aus Homeverzeichnis entfernen
@@ -194,6 +195,7 @@ automatischerDmsImport=Automatischer DMS-Export
 automatischerSchritt=Automatische Aufgabe
 autor=Autor
 autorHerausgeber=Autor / Herausgeber
+available=Verf\u00fcgbar
 baendeGesamt=B\u00E4nde gesamt
 band=Band
 bandNrAnzeige=Band-Nr. Anzeige
