--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -178,6 +178,7 @@ arbeitsschritte=List of tasks
 artikel=Articles
 artikelDurchschnitt=Articles average
 artikelGesamt=Articles total
+assigned=Assigned
 ats=ATS
 ausGruppeLoeschen=Delete user from group
 ausHomeverzeichnisEntfernen=Remove link from home directory
@@ -197,6 +198,7 @@ automatischerDmsImport=Automatic DMS export
 automatischerSchritt=Automatic task
 autor=Author
 autorHerausgeber=Author / Publisher
+available=Available
 baendeGesamt=Volumes total
 band=Volume
 bandNrAnzeige=Volume number view
