Add 'change password' and 'user configuration' pages with new layout

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -317,6 +317,7 @@ calendar.upload.overlappingDateRanges=Due to overlapping date ranges of blocks, 
 calendar.upload.submit=Submit file
 catalogue_used=Catalogue used\:
 category=Category
+changingPassword=Changing password...
 chart=Chart
 chartAndTable=Chart & table
 citation.accessTimestamp=Accessed\:
@@ -327,6 +328,7 @@ citation.quotes.open=\u201C
 citation.versionDate=Version of\:
 clear=delete entry
 close=close
+colorScheme=Color scheme
 configurationChanged=Configuration changed
 configurationFile=Configuration file
 confirmNewPassword=Confirm new password
@@ -743,7 +745,6 @@ neuenVorgangAnlegen=Create new process
 neuesMetadatumAnlegen=Create new metadata
 neuesPasswort=New password
 neuesPasswortFestlegen=Define new password
-neuesPasswortNichtGleich=The new password was typed in different.
 neuesProjektAnlegen=Create new project
 neuesStrukturelement=New docstruct
 new=Ready
@@ -823,6 +824,7 @@ paginierungEinlesen=Read in pagination from images
 paginierungFestlegen=Define pagination
 part=part
 password=Password
+passwordsDontMatch=The passwords you entered do not match!
 passwortAendern=Change password
 passwortGeaendert=The password has been changed.
 passwortUngueltig=Incorrect password
@@ -1018,6 +1020,7 @@ sucheStarten=Start search
 suffix=Suffix
 tabellengroesse=Table size
 table=Table
+tableSize=Table size
 taskManagerIsRunning=do not start tasks automatically
 taskManagerIsStopped=start tasks automatically
 taskmanager=Task manager
