Extend IndexingForm with indexing of authorizations

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -13,6 +13,7 @@ Anlegen\ eines\ Prozesses\ (auf\ Bandebene)=Anlegen eines Vorgangs (auf Bandeben
 Anlegen\ eines\ Prozesses\ auf\ Bandebene=Anlegen eines Vorgangs auf Bandebene
 AuswaehlenAusVorhandenenProzessen=Ausw\u00E4hlen aus vorhandenen Vorg\u00E4ngen
 Automatische\ Generierung\ der\ SICI=Automatische Generierung der SICI
+authorizations=Berechtigungen
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Bandweise Endkontrolle und Freigabe aller Metadaten
 BatchPorpertyEmpty=Die Eigenschaft {0} im Vorgang {1} ist ein Pflichtfeld, enth\u00E4lt aber keinen Wert.
 BatchPropertyValidation=Die Eigenschaft {0} im Vorgang {1} enth\u00E4lt einen ung\u00FCltigen Wert.
