--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -13,6 +13,7 @@ Anlegen\ eines\ Prozesses\ (auf\ Bandebene)=Process creation (at volume level)
 Anlegen\ eines\ Prozesses\ auf\ Bandebene=Process creation (at volume level)
 AuswaehlenAusVorhandenenProzessen=Choose from previous processes
 Automatische\ Generierung\ der\ SICI=Automatic generation of SICI
+authorizations=Authorizations
 Bandweise\ Endkontrolle\ und\ Freigabe\ aller\ Metadaten=Final checking at volume level and release of all metadata
 BatchPorpertyEmpty=The property {0} in process {1} is a mandatory field but contains no value.
 BatchPropertyValidation=The property {0} in process {1} contains a invalid value.
