Show notification while saving user group

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -1079,6 +1079,7 @@ userDN=User DN
 userGroupAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da dieser noch Aufgaben zugewiesen sind.
 userGroupNotEmpty=Benutzergruppe ist nicht leer, L\u00F6schen wurde verweigert
 userGroupNotSelected=Keine Benutzergruppe ausgew\u00E4hlt
+userGroupSaving=Benutzergruppe wird gespeichert
 userNotFound=Benutzer kann nicht ermittelt werden
 userSaving=Benutzer wird gespeichert
 userYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
@@ -1135,6 +1136,7 @@ wrongLogin=Fehler bei Authentifizierung
 year=Jahr
 years=Jahre
 yes=Ja
+youWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 zeitraum=Zeitraum
 zeitschrift=Zeitschrift
 zuGruppeHinzufuegen=Zu einer Benutzergruppe hinzuf\u00FCgen
