--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -1085,6 +1085,7 @@ userDN=User DN
 userGroupAssignedError=The user group could not be deleted because there are still assigned steps.
 userGroupNotEmpty=User group is not empty
 userGroupNotSelected=No user group selected
+userGroupSaving=Saving user group
 userNotFound=User not found
 users=Users
 userSaving=Saving user
@@ -1142,6 +1143,7 @@ wrongLogin=Authentication failure
 year=year
 years=years
 yes=yes
+youWillBeRedirected=You will be redirected after successful save.
 zeitraum=Period
 zeitschrift=Periodical
 zuGruppeHinzufuegen=Add user to user group
