--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -822,7 +822,7 @@ paginierungEinlesen=Paginierung anhand der Images einlesen
 paginierungFestlegen=Paginierung festlegen
 part=Teil
 password=Passwort
-passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht überein!
+passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht \u00FCberein!
 passwortAendern=Passwort \u00E4ndern
 passwortGeaendert=Das Passwort wurde erfolgreich ge\u00E4ndert.
 passwortUngueltig=Passwort ung\u00FCltig
@@ -910,7 +910,9 @@ roemischBracket=[r\u00F6misch]
 rolle=Rolle
 rulesetFile=Dateiname des Regelsatzes
 rulesetOrderByFile=Sortierung wie im Regelsatz
+rulesetSaving=Regelsatz wird gespeichert
 rulesetTitle=Name des Regelsatzes
+rulesetYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 runtimeOfSteps=Laufzeit der Aufgaben
 russischeMetadatenExportieren=Datei f\u00FCr russische Metadaten exportieren
 saveConfiguration=Konfigurationsdatei speichern
