Add 'docket edit' page in new layout

--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -412,6 +412,7 @@ docketFile=File Name of docket
 docketMissing=the configuration file for docket createion is missing
 docketTitle=Name of docket
 dockets=Dockets
+docketSaving=Saving docket...
 docstructAnAndereStelleSchieben=Move docstruct to other location
 docstructNachObenSchieben=Move docstruct up
 docstructNachUntenSchieben=Move docstruct down
@@ -1140,6 +1141,7 @@ wrongLogin=Authentication failure
 year=year
 years=years
 yes=yes
+youWillBeRedirected=You will be redirected after successful save.
 zeitraum=Period
 zeitschrift=Periodical
 zuGruppeHinzufuegen=Add user to user group
