--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -409,6 +409,7 @@ docketFile=Dateiname des Laufzettels
 docketMissing=Die Konfigurationsdatei zur Laufzettelgenerierung existiert nicht
 docketTitle=Name des Laufzettels
 dockets=Laufzettel
+docketSaving=Laufzettel wird gespeichert...
 docstructAnAndereStelleSchieben=Strukturelement an andere Stelle schieben
 docstructNachObenSchieben=Strukturelement nach oben schieben
 docstructNachUntenSchieben=Strukturelement nach unten schieben
@@ -1133,6 +1134,7 @@ wrongLogin=Fehler bei Authentifizierung
 year=Jahr
 years=Jahre
 yes=Ja
+youWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 zeitraum=Zeitraum
 zeitschrift=Zeitschrift
 zuGruppeHinzufuegen=Zu einer Benutzergruppe hinzuf\u00FCgen
