unified saving and redirect messages

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -636,8 +636,7 @@ lastPage=Als letzte Seite einf\u00FCgen
 laufzettelDrucken=Laufzettel drucken
 ldapKonfigurationSchreiben=LDAP-Konfiguration schreiben
 ldapWritten=LDAP Konfiguration erfolgreich geschrieben f\u00FCr\:
-ldapgroupSaving=LDAP-Gruppe wird gespeichert
-ldapgroupYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
+ldapgroupSaving=LDAP-Gruppe wird gespeichert...
 ldapgruppe=LDAP-Gruppe
 ldapgruppeBearbeiten=LDAP-Gruppe bearbeiten
 ldapgruppen=LDAP-Gruppen
@@ -851,8 +850,7 @@ projectConfiguration=Projektkonfiguration
 projectIsArchived=Projekt ist inaktiv
 projectProgress=Projektentwicklung
 projects=Projekt
-projectSaving=Projekt wird gespeichert
-projectYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
+projectSaving=Projekt wird gespeichert...
 projekt=Projekt
 projektBearbeiten=Projekt bearbeiten
 projektHinzufuegen=Projekt hinzuf\u00FCgen
@@ -910,9 +908,8 @@ roemischBracket=[r\u00F6misch]
 rolle=Rolle
 rulesetFile=Dateiname des Regelsatzes
 rulesetOrderByFile=Sortierung wie im Regelsatz
-rulesetSaving=Regelsatz wird gespeichert
+rulesetSaving=Regelsatz wird gespeichert...
 rulesetTitle=Name des Regelsatzes
-rulesetYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 runtimeOfSteps=Laufzeit der Aufgaben
 russischeMetadatenExportieren=Datei f\u00FCr russische Metadaten exportieren
 saveConfiguration=Konfigurationsdatei speichern
@@ -1080,8 +1077,7 @@ userGroupAssignedError=Die Benutzergruppe kann nicht gel\u00F6scht werden, da di
 userGroupNotEmpty=Benutzergruppe ist nicht leer, L\u00F6schen wurde verweigert
 userGroupNotSelected=Keine Benutzergruppe ausgew\u00E4hlt
 userNotFound=Benutzer kann nicht ermittelt werden
-userSaving=Benutzer wird gespeichert
-userYouWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
+userSaving=Benutzer wird gespeichert...
 validieren=Validieren
 value=Wert
 valueIsRequired=Der Wert wird ben\u00F6tigt.
@@ -1135,6 +1131,7 @@ wrongLogin=Fehler bei Authentifizierung
 year=Jahr
 years=Jahre
 yes=Ja
+youWillBeRedirected=Sie werden nach erfolgreichem Speichern weitergeleitet.
 zeitraum=Zeitraum
 zeitschrift=Zeitschrift
 zuGruppeHinzufuegen=Zu einer Benutzergruppe hinzuf\u00FCgen
