--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -639,8 +639,7 @@ lastPage=Insert as last page
 laufzettelDrucken=Print docket
 ldapKonfigurationSchreiben=Write LDAP configuration
 ldapWritten=LDAP configuration successfully written for user\: ????
-ldapgroupSaving=Saving LDAP group
-ldapgroupYouWillBeRedirected=You will be redirected after successful save.
+ldapgroupSaving=Saving LDAP group...
 ldapgruppe=LDAP group
 ldapgruppeBearbeiten=Edit LDAP group
 ldapgruppen=LDAP groups
@@ -855,8 +854,7 @@ projectConfiguration=Project configuration
 projectIsArchived=project inactive
 projectProgress=Project progress
 projects=project
-projectSaving=Saving project
-projectYouWillBeRedirected=You will be redirected after successful save.
+projectSaving=Saving project...
 projekt=Project
 projektBearbeiten=Edit project
 projektHinzufuegen=Add project
@@ -916,9 +914,8 @@ roemischBracket=[roman]
 rolle=Role
 rulesetFile=Ruleset file name
 rulesetOrderByFile=Sorting as in the rule set
-rulesetSaving=Saving ruleset
+rulesetSaving=Saving ruleset...
 rulesetTitle=Name of rule set
-rulesetYouWillBeRedirected=You will be redirected after successful save.
 runtimeOfSteps=Duration of the steps
 rusdmlWebseite=RusDML website
 russischeMetadatenExportieren=Export file for Russian metadata
@@ -1087,8 +1084,7 @@ userGroupNotEmpty=User group is not empty
 userGroupNotSelected=No user group selected
 userNotFound=User not found
 users=Users
-userSaving=Saving user
-userYouWillBeRedirected=You will be redirected after successful save.
+userSaving=Saving user...
 validieren=Validate
 valueIsRequired=The value is required.
 verlag=Publishing house
@@ -1142,6 +1138,7 @@ wrongLogin=Authentication failure
 year=year
 years=years
 yes=yes
+youWillBeRedirected=You will be redirected after successful save.
 zeitraum=Period
 zeitschrift=Periodical
 zuGruppeHinzufuegen=Add user to user group
