New layout for search a process

--- a/Kitodo/src/main/resources/messages/messages_de.properties
+++ b/Kitodo/src/main/resources/messages/messages_de.properties
@@ -327,6 +327,7 @@ citation.quotes.open=\u201E
 citation.pages=Seiten
 citation.versionDate=Stand\:
 clear=Eingabe l\u00F6schen
+clearData=Daten l\u00F6schen
 close=Schlie\u00DFen
 colorScheme=Farbschema
 configurationChanged=Einstellungen ge\u00E4ndert
@@ -825,7 +826,7 @@ paginierungEinlesen=Paginierung anhand der Images einlesen
 paginierungFestlegen=Paginierung festlegen
 part=Teil
 password=Passwort
-passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht überein!
+passwordsDontMatch=Die eingegebenen Passw\u00F6rter stimmen nicht ï¿½berein!
 passwortAendern=Passwort \u00E4ndern
 passwortGeaendert=Das Passwort wurde erfolgreich ge\u00E4ndert.
 passwortUngueltig=Passwort ung\u00FCltig
