--- a/Kitodo/src/main/resources/messages/messages_en.properties
+++ b/Kitodo/src/main/resources/messages/messages_en.properties
@@ -330,6 +330,7 @@ citation.quotes.close=\u201D
 citation.quotes.open=\u201C
 citation.versionDate=Version of\:
 clear=delete entry
+clearData=Clear data
 close=close
 colorScheme=Color scheme
 configurationChanged=Configuration changed
